<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="4"
        android:gravity="top"
        android:paddingTop="30dp"
        >
        <Button
            android:id="@+id/off_option"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/off_text"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/flash_option"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/flash_text"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/chase_option"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/chase_text"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/fade_option"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/fade_text"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/solid_option"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/solid_text"
            android:textSize="30sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:text="@string/start_button"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:textSize="40sp"
        android:layout_weight="1"
        />

</LinearLayout>