<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LightOptions"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/color_prompt"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            />
        <Button
            android:id="@+id/color_change_button"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="fill_parent"
            android:textSize="30sp"
            android:text="@string/color_change_button"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/light_peed_prompt"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            />

        <SeekBar
            android:id="@+id/light_speed_control"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:min="1"
            android:max="5"
            android:progress="3"
            />
    </LinearLayout>
    <Button
        android:id="@+id/light_back_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:text="@string/light_options_back"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="40sp"
        android:layout_weight="0.5"
        />
</LinearLayout>